# FlowerTune-Qwen2.5-7B-Instruct-Medical

./: README.md  pyproject.toml
flowertune-eval-medical/: eval.py
flowertune-eval-medical/benchmarks/: acc_medmcqa_fl.txt  acc_medqa_fl.txt  acc_pubmedqa_fl.txt  communication_budget.txt  generation_medmcqa_fl.jsonl  generation_medqa_fl.jsonl  generation_pubmedqa_fl.jsonl  train_loss.txt
flowertune_med/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
